// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts files 1`] = `
"[33m-[39m Check types
[32m✔[39m Check types
"
`;

exports[`checks both tests 1`] = `
"[33m-[39m Check types
[31m✖[39m Check types

[31m✖ [90mtest/[31ma.types.ts[90m[31m:3:10:[39m[1m Type error [90mTS2345[39m
[22m  [31mArgument of type 'string' is not assignable to parameter of type 'number'.[39m

[31m✖ [90mtest/[31ma.errors.ts[90m[31m:4:10:[39m[1m Wrong error
[22m  Expected: [32mArgument of type '"1"' is not assignable to parameter of type 'number'.[39m
  Got: [31mArgument of type 'string' is not assignable to parameter of type 'number'.[39m

[31m✖ [90mtest/[31mb.errors.ts[90m[31m:9:7:[39m[1m Wrong error
[22m  Expected: [32mWrong[39m
  Got: [31mExpected 3 arguments, but got 2.[39m

[31m✖ [90mtest/[31mb.errors.ts[90m[31m:12:20:[39m[1m Unexpected error
[22m  [31mExpected 1 arguments, but got 2.[39m

[31m✖ [90mtest/[31mb.errors.ts[90m[31m:15:12:[39m[1m Wrong error
[22m  Expected: [32mnot assignable to parameter of type '"set" | "tick"'[39m
  Got: [31mArgument of type '"unknown"' is not assignable to parameter of type 'keyof Events'.[39m

[31m✖ [90mtest/[31mb.errors.ts[90m[31m:11:1:[39m[1m Error was not found
[22m  [31mMissed[39m

"
`;

exports[`checks mixed tests 1`] = `
"[33m-[39m Check types
[32m✔[39m Check types
[32m✔ [39m[90ma/[37merrors.ts[90m[39m
[32m✔ [39m[90ma/[37mtypes.ts[90m[39m
"
`;

exports[`checks negative tests 1`] = `
"[33m-[39m Check types
[31m✖[39m Check types

[31m✖ [90m[31ma.d.ts[90m[31m:1:18:[39m[1m Type error [90mTS7010[39m
[22m  [31m'a', which lacks return-type annotation, implicitly has an 'any' return type.[39m

[31m✖ [90mtest/[31ma.errors.ts[90m[31m:4:10:[39m[1m Wrong error
[22m  Expected: [32mArgument of type '"1"' is not assignable to parameter of type 'number'.[39m
  Got: [31mArgument of type 'string' is not assignable to parameter of type 'number'.[39m

[31m✖ [90mtest/[31mb.errors.ts[90m[31m:9:7:[39m[1m Wrong error
[22m  Expected: [32mWrong[39m
  Got: [31mExpected 3 arguments, but got 2.[39m

[31m✖ [90mtest/[31mb.errors.ts[90m[31m:12:20:[39m[1m Unexpected error
[22m  [31mExpected 1 arguments, but got 2.[39m

[31m✖ [90mtest/[31mb.errors.ts[90m[31m:15:12:[39m[1m Wrong error
[22m  Expected: [32mnot assignable to parameter of type '"set" | "tick"'[39m
  Got: [31mArgument of type '"unknown"' is not assignable to parameter of type 'keyof Events'.[39m

[31m✖ [90mtest/[31mb.errors.ts[90m[31m:11:1:[39m[1m Error was not found
[22m  [31mMissed[39m

"
`;

exports[`checks positive tests 1`] = `
"[33m-[39m Check types
[31m✖[39m Check types

[31m✖ [90mtest/[31mtypes.ts[90m[31m:3:14:[39m[1m Type error [90mTS2345[39m
[22m  [31mArgument of type 'string' is not assignable to parameter of type 'number'.[39m

[31m✖ [90mtest/[31merrors.ts[90m[31m:4:14:[39m[1m Wrong error
[22m  Expected: [32mArgument of type '"1"' is not assignable to parameter of type 'number'.[39m
  Got: [31mArgument of type 'string' is not assignable to parameter of type 'number'.[39m

"
`;

exports[`loads custom tsconfig.json 1`] = `
"[33m-[39m Check types
[32m✔[39m Check types
[32m✔ [39m[90m[37mtypes.ts[90m[39m
"
`;

exports[`loads custom tsconfig.json with extends property 1`] = `
"[33m-[39m Check types
[32m✔[39m Check types
[32m✔ [39m[90m[37mindex.errors.ts[90m[39m
"
`;

exports[`shows errors not associated with a file 1`] = `
"[33m-[39m Check types
[31m✖[39m Check types

undefined

"
`;

exports[`supports simple cases 1`] = `
"[33m-[39m Check types
[32m✔[39m Check types
[32m✔ [39m[90mtest/[37merrors.ts[90m[39m
[32m✔ [39m[90mtest/[37mtypes.ts[90m[39m
"
`;
